rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q1248.2_2001_IN-SSF-SCF-pkgs-contracts-acs.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q1248.2_2001_IN-SSF-SCF-pkgs-contracts-acs.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 374, column 2]
     │
     │ 
 373 │  -- Contracts
 374 │  inSsfToScfGeneric CONTRACT ::= { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 375 │    -- dialogue initiated by SSF with InitialDP Operation
 376 │    --The inSsfToScfGeneric contract expresses the form of the service in which the SSF,
 377 │    --a ROS object of class ssf, initiates the generic triggering approach contract.
 378 │    --A ROS-object of class scf, responds to this contract.
 379 │    INITIATOR CONSUMER OF
 380 │      {activityTestPackage | exceptionInformPackage{networkSpecificB2} |
 381 │        scfActivationPackage{networkSpecificB1, networkSpecificB2}}
 382 │    RESPONDER CONSUMER OF
 383 │      {activityTestPackage |
 384 │        assistConnectionEstablishmentPackage{networkSpecificB1,
 385 │                                            networkSpecificB2} |
 386 │        bcsmEventHandlingPackage{networkSpecificB1, networkSpecificB2} |
 387 │        billingPackage{networkSpecificB2} |
 388 │        callHandlingPackage{networkSpecificB2} |
 389 │        callReportPackage{networkSpecificB1, networkSpecificB2} |
 390 │        cancelPackage{networkSpecificB2} |
 391 │        chargingEventHandlingPackage{networkSpecificB1, networkSpecificB2} |
 392 │        chargingPackage{networkSpecificB1, networkSpecificB2} |
 393 │        connectPackage{networkSpecificB1, networkSpecificB2} |
 394 │        cphResponsePackage{networkSpecificB1, networkSpecificB2} |
 395 │        facilityIEHandlingPackage{networkSpecificB1} |
 396 │        genericDisconnectResourcePackage{networkSpecificB1, networkSpecificB2} |
 397 │        nonAssistedConnectionEstablishmentPackage{networkSpecificB1,
 398 │                                                 networkSpecificB2} |
 399 │        signallingControlPackage{networkSpecificB1, networkSpecificB2} |
 400 │        specializedResourceControlPackage{networkSpecificB1, networkSpecificB2,
 401 │                                         networkSpecificB3} |
 402 │        scriptControlPackage{networkSpecificB1, networkSpecificB2} |
 403 │        messageControlPackage{networkSpecificB1, networkSpecificB2,
 404 │                             networkSpecificB3} |
 405 │        ssfCallProcessingPackage{networkSpecificB1, networkSpecificB2} |
 406 │        statusReportingPackage{networkSpecificB1, networkSpecificB2} |
 407 │        timerPackage{networkSpecificB1, networkSpecificB2} |
 408 │        trafficManagementPackage{networkSpecificB1, networkSpecificB2} |
 409 │        uSIHandlingPackage{networkSpecificB1, networkSpecificB2} |
 410 │        scfCallInitiationPackage{networkSpecificB1, networkSpecificB2} |
 411 │        triggerCallManagementPackage{networkSpecificB1, networkSpecificB2}}
 412 │    ID                     id-inSsfToScfGeneric
 413 │  }
     │
─────╯
