rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q1248.3_2001_IN-SCF-SRF-Classes.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q1248.3_2001_IN-SCF-SRF-Classes.asn1
---
Warnings:
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'


Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod in_scf_srf_classes {
    extern crate alloc;
    use super::in_object_identifiers::{
        ID_PACKAGE_EMPTY_CONNECTION, ID_ROS_OBJECT_SRF, ID_ROS_OBJECT_SSF, ROS_INFORMATION_OBJECTS,
        ROS_USEFUL_DEFINITIONS, SCF_SRF_DATATYPES, SCF_SRF_PROTOCOL, SSF_SCF_DATATYPES,
    };
    use super::remote_operations_information_objects::*;
    use super::remote_operations_useful_definitions::{EMPTY_BIND, EMPTY_UNBIND};
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
}
