rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q1248.3_2001_IN-SCF-SRF-pkgs-contracts-acs.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q1248.3_2001_IN-SCF-SRF-pkgs-contracts-acs.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 90, column 2]
     │
     │ 
 089 │  -- Contracts
 090 │  srf-scf-contract CONTRACT ::= { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 091 │    INITIATOR CONSUMER OF
 092 │      {srf-scfActivationOfAssistPackage{networkSpecificB1, networkSpecificB2} |
 093 │        srfManagementPackage{networkSpecificB1, networkSpecificB2}}
 094 │    RESPONDER CONSUMER OF
 095 │      {specializedResourceControlPackage{networkSpecificB1, networkSpecificB2,
 096 │                                        networkSpecificB3} |
 097 │        srf-scfCancelPackage{networkSpecificB2} |
 098 │        scriptControlPackage{networkSpecificB1, networkSpecificB2} |
 099 │        activityTestPackage |
 100 │        messageControlPackage{networkSpecificB1, networkSpecificB2,
 101 │                             networkSpecificB3}}
 102 │    ID                     id-contract-srf-scf
 103 │  }
 105 │  -- specializedResourceControl package
     │
─────╯
