rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q1248.4_2001_IN-SCF-SDF-Additional-Definitions.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q1248.4_2001_IN-SCF-SDF-Additional-Definitions.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 217, column 6]
     │
     │ 
 217 │      (WITH COMPONENTS { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 218 │         ...,
 219 │         toBeProtected  (WITH COMPONENTS {
 220 │                           ...,
 221 │                           searchInfo  (WITH COMPONENTS {
 222 │                                          ...,
 223 │                                          entries                  (WITH
 224 │                                                                      COMPONENT
 225 │                                                                      (IN-EntryInformation)),
 226 │                                          partialOutcomeQualifier  (PartialOutcomeQualifier
 227 │                                                                      (WITH COMPONENTS {
 228 │                                                                      ...,
 229 │                                                                      queryReference  ABSENT
 230 │                                                                      }))OPTIONAL
 231 │                                        })
 232 │                         })
 233 │       })
 235 │  -- Errors definition
     │
─────╯
