rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q1248.4_2001_IN-SCF-SDF-operations.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q1248.4_2001_IN-SCF-SDF-operations.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 166, column 6]
     │
     │ 
 166 │      {SEQUENCE {tfcCriteria  [0]  TFCcriteria, ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 167 │                 duration     [1] IMPLICIT Duration,
 168 │                 controlType  [2] IMPLICIT ControlType,
 169 │                 security     [3] IMPLICIT SecurityParameters,
 170 │                 wasChained   [4] IMPLICIT BOOLEAN DEFAULT FALSE,
 171 │                 ...,
 172 │                 ...}, scfqop.&scfArgumentQOP}
     │
─────╯
