rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q1248.5_2001_IN-SDF-SDF-Operations.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q1248.5_2001_IN-SDF-SDF-Operations.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 332, column 2]
     │
     │ 
 323 │  -- An IN-DSABind operation is used to begin of a period of cooperation between two DSAs providing
 324 │  -- the Directory service.
 325 │  -- A DSA, having received an operation from a DUA, may elect to construct a chained form of that
 326 │  -- operation to propagate to another DSA. For IN CS-4 a DSA, having received a chained form of an
 327 │  -- operation, must either process the operation or if the originating DSA is in another network, chain it
 328 │  -- to another DSA within the same network as the receiving DSA. The DSA invoking a chained form of
 329 │  -- an operation may optionally sign the argument of the operation; the DSA performing the operation,
 330 │  --if so requested, may sign the result of the operation.
 331 │  -- The chained form of an operation is specified using the parameterized type IN-chained {}.
 332 │  in-Chained{OPERATION:operation} OPERATION ::= { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 333 │    ARGUMENT OPTIONALLY-PROTECTED
 334 │      {SET {in-chainedArgument  IN-ChainingArguments,
 335 │            argument            [0]  operation.&ArgumentType},
 336 │       dirqop.&dspChainedOp-QOP}
 337 │    RESULT OPTIONALLY-PROTECTED
 338 │      {SET {in-chainedResult  IN-ChainingResults,
 339 │            result            [0]  operation.&ResultType},
 340 │       dirqop.&dspChainedOp-QOP}
 341 │    ERRORS
 342 │      {operation.&Errors EXCEPT (referral | in-DSAReferral)}
 343 │    CODE                           operation.&operationCode
 344 │  }
     │
─────╯
